# news-ai-analysis

./: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  alembic.ini  app.py  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
src/news_ai_analysis/: app.py  config.py  database.py  dependencies.py  main.py  models.py
src/news_ai_analysis/assistant/: config.py  constants.py  service.py
src/news_ai_analysis/collector/: service.py  storage.py
src/news_ai_analysis/llm/: config.py  service.py  utils.py
src/news_ai_analysis/parsing/: __init__.py  base.py  fetcher.py  html.py  models.py  news_collector.py  repositories.py  repository.py  rss.py  rss_config.py  schemas.py  scraper.py
src/news_ai_analysis/rag/: config.py  service.py  utils.py
src/news_ai_analysis/scripts/: create_db.py
src/news_ai_analysis/ui/: interface.py  service.py  utils.py
src/news_ai_analysis/ui/pages/: chat.py  feed.py  sentiment.py  settings.py  sources.py  system.py
