[project]
name = "news-ai-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Маклаков Даниил Павлович",email = "dpmaklakov@edu.hse.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.133.1,<0.134.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "gradio (>=6.6.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "news_ai_analysis", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
