[project]
name = "news-ai-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Маклаков Даниил Павлович",email = "dpmaklakov@edu.hse.ru"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "fastapi (>=0.133.1,<0.134.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "gradio (>=6.6.0,<7.0.0)",
    "sqlalchemy (>=2.0.47,<3.0.0)",
    "streamlit (>=1.55.0,<2.0.0)",
    "langchain-core (>=1.2.19,<2.0.0)",
    "sentence-transformers (>=5.3.0,<6.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)"
]

[tool.poetry]
packages = [{include = "news_ai_analysis", from = "src"}]
package-mode=false

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
pytest = "^9.0.2"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"